# URL-Shortener-in-40-Languages

./: LEARN.md  README.md
Extended/Bash/: url_shortener.sh
Extended/Brainfuck/: url_shortener.bf
Extended/COBOL/: url_shortener.cob
Extended/Erlang/: url_shortener.erl
Extended/FSharp/: url_shortener.fs
Extended/Julia/: url_shortener.jl
Extended/Nim/: url_shortener.nim
Extended/OCaml/: url_shortener.ml
Extended/PowerShell/: url_shortener.ps1
Extended/Rust/: .gitignore  Cargo.toml  README.md
Extended/Rust/src/: main.rs
Extended/Swift/: url_shortener.swift
Extended/V/: url_shortener.v
Kotlin/: Main.kt
Minimal/AWK/: url_shortener.awk
Minimal/Assembly/: url_shortener.asm
Minimal/C#/: Program.cs
Minimal/C++/: url_shortener.cpp
Minimal/Clojure/: url_shortener.clj
Minimal/Crystal/: url_shortener.cr
Minimal/D/: url_shortener.d
Minimal/Dart/: url_shortener.dart
Minimal/Elixir/: url_shortener.ex
Minimal/Fortran/: url_shortener.f90
Minimal/Go/: main.go
Minimal/Haskell/: url_shortener.hs
Minimal/Lua/: url_shortener.lua
Minimal/MATLAB/: url_shortener.m
Minimal/PHP/: url_shortener.php
Minimal/Pascal/: url_shortener.pas
Minimal/Perl/: url_shortener.pl
Minimal/Prolog/: url_shortener.pl
Minimal/Python/: url_shortener.py
Minimal/R/: url_shortener.R
Minimal/Racket/: url_shortener.rkt
Minimal/Rust/: Cargo.toml
Minimal/SQL/: url_shortener.sql
Minimal/Scala/: url_shortener.scala
Minimal/Scheme/: url_shortener.scm
Minimal/Smalltalk/: url_shortener.st
Python/: url_shortener.py
Ruby/: url_shortener.rb
(+3 files in other folders)
